* Thu Aug 123 2023 Alin Popa <alin.popa@fxdata.ro> - 1.6.2
- Add CLI option for session inactivity timeout

* Thu Jul 12 2023 Alin Popa <alin.popa@fxdata.ro> - 1.6.1
- Add interface for ProcInfo file descriptor count
- Add support for collecting SysProcVMStat data source

* Thu Jun 7 2023 Alin Popa <alin.popa@fxdata.ro> - 1.6.0
- read RSS and PSS for process memory info

* Thu Jan 26 2023 Alin Popa <alin.popa@fxdata.ro> - 1.5.7
- Bug fixes

* Thu Jan 21 2023 Alin Popa <alin.popa@fxdata.ro> - 1.5.6
- Bug fixes

* Thu Nov 10 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.4
- Update to libtaskmonitor v1.0.4
- Add VmSize and MemShared data support

* Thu Nov 3 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.3
- Update to libtaskmonitor v1.0.3
- Fix errors when building with harden security flags
- CLI improvements


* Thu Oct 4 2022 Alin Popa <alin.popa@fxdata.ro> - 1.5.2
- Update to libtaskmonitor v1.0.2
- Fix process not re-added to context after restart

* Fri May 06 2022 Alin Popa <alin.popa@fxdata.ro> - 1.0
- Initial release with distro packages