@@ -17,6 +17,7 @@
 #include <memory>
 #include <ostream>
 #include <string>
+#include <taskmonitor/Helpers.h>
 #include <unistd.h>
 
 #include "Application.h"
@@ -277,6 +278,17 @@ static bool doSetSession(const std::shared_ptr<Dispatcher> mgr, const Dispatcher
   logInfo() << "Monitor accepted session with id: " << sessionInfo.hash();
   App()->getSessionInfo().CopyFrom(sessionInfo);
   App()->getSessionData().set_hash(App()->getSessionInfo().hash());
+
+  if (sessionInfo.libtkm_version() != TKMLIB_VERSION) {
+    App()->printVerbose("WARNING: Target data interface missmatch (device: v" +
+                        sessionInfo.libtkm_version() + " reader: v" + TKMLIB_VERSION +
+                        "). Invalid data may be recorded!");
+    if (App()->getArguments()->getFor(Arguments::Key::Force) !=
+        tkmDefaults.valFor(Defaults::Val::True)) {
+      Dispatcher::Request rq{.action = Dispatcher::Action::Quit};
+      return mgr->pushRequest(rq);
+    }
+  }
 
   logDebug() << "SessionInfo FastLaneInterval=" << sessionInfo.fast_lane_interval()
              << " PaceLaneInterval=" << sessionInfo.pace_lane_interval()
